--- a/public/views/nav.html
+++ b/public/views/nav.html
@@ -5,5 +5,10 @@
             <li ng-class="{ active: PAGE === 'new' }"><a href="/contact/new">New Contact</a></li>
 
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="/logout" target="_self"> Log Out </a></li>
+        </ul>
+
+
     </div>
 </nav>
